# SRTify

./: README.md  build_perm.js  package-lock.json  package.json
.github/workflows/: main.yml  static.yml
dashboard/: index.html
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  local_server.rs  main.rs  transcriber.rs  utils.rs  websocket.rs
