[package]
name = "srtify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "srtify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7" # Updated to Warp 0.4.x
whisper-rs = "0.13.2"
whisper-rs-sys = "0.11.1"
# vosk = "0.3.1"
anyhow = "1"
futures = "0.3"
parking_lot = "0.12"
tokio-tungstenite = "0.26.1"
futures-util = "0.3.31"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] } # Enable the 'fs' feature
rfd = "0.15.2"
url = "2.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
